<resources>
    <string name="app_name">MH Shopping</string>
    <string name="header_title">MH Shopping</string>

    <string name="privacy_policy_url">http://example.com</string>

    <string name="currency">₹</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="play_more_apps">https://play.google.com/</string>

    <string name="isRTL">false</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="dnt_have_acc">Dont have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="cpassword">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_cpassword">Enter Confirm Password</string>
    <string name="pass_nomatch">Password not matched</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="net_not_conn">Internet not connected</string>
    <string name="error_registering">Error while registering</string>
    <string name="register_success">Register Successful</string>
    <string name="email_already_regis">Email already registered</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_in">Login..</string>
    <string name="login_success">Login Successful</string>
    <string name="email_pass_nomatch">Email and Password not matched</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="error_login">Error in Login</string>
    <string name="logout_success">Logout Successful</string>
    <string name="home">Home</string>
    <string name="hotel_list">Product List</string>
    <string name="profile">Profile</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="moreapp">More App</string>
    <string name="aboutus">About Us</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="hi">Hi,</string>
    <string name="guest">Guest</string>
    <string name="no_data_found">No data found</string>
    <string name="about">About Us</string>
    <string name="loading">Loading..</string>
    <string name="not_log">Not Logged In, Please login</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="no_user_found">No user found</string>
    <string name="updating">Updating..</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="update">Update</string>
    <string name="update_prof_succ">Profile Updated Successful</string>
    <string name="update_prof_not_succ">Error updating profile</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="email_empty">Email is Empty</string>
    <string name="cannot_use_save">Please allow permission to run app smooth</string>
    <string name="latest">Latest</string>
    <string name="view_all">View All</string>
    <string name="error_server">Error connecting server</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="type">Type</string>
    <string name="schedule">Schedule</string>
    <string name="sunday">Sunday :-</string>
    <string name="monday">Monday :-</string>
    <string name="tuesday">Tuesday :-</string>
    <string name="wednesday">Wednesday :-</string>
    <string name="thursday">Thursday :-</string>
    <string name="friday">Friday :-</string>
    <string name="saturday">Saturday :-</string>
    <string name="your_msg">Your Message :-</string>
    <string name="submit">Submit</string>
    <string name="select_rating_msg">Please enter rating as well as message</string>
    <string name="price">Price:</string>
    <string name="cart">Cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total">Total :-</string>
    <string name="checkout">Checkout</string>
    <string name="comment">Comment</string>
    <string name="total_amount">Total Amount</string>
    <string name="address_empty">Address cannot be empty</string>
    <string name="no_items_cart">No Items in cart</string>
    <string name="error_order">Error placing order, please try again</string>
    <string name="orderlist">Order List</string>
    <string name="pending">Pending</string>
    <string name="quantity">Quantity:</string>
    <string name="qty">Qty:-</string>
    <string name="press_again_exit">Press again to Exit</string>
    <string name="top_rated">Top Rated</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="version">Version</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="reload">Reload</string>
    <string name="no_cat_found">No Categories Found</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="signin_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="send">Send</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="name_">Name :-</string>
    <string name="schedule_">Schedule :-</string>
    <string name="address_">Address :-</string>
    <string name="rate">Rate</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="edit_cart">Edit Cart</string>
    <string name="x">x</string>
    <string name="max_quantity_reached">Max Quantity Reached</string>
    <string name="update_cart">Update Cart</string>
    <string name="remove_menu_from_cart">Do you want to remove this menu from cart?</string>
    <string name="remove">Remove</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="delivery_address">Delivery Address :-</string>
    <string name="message">Message (optional) :-</string>
    <string name="message_related_order">Message related to order</string>
    <string name="order_id_">Order Id :-</string>
    <string name="cannot_add_menu_diff_restaurant">Cannot add menu from different restaurant, do you want to clear previous items?</string>
    <string name="clear">Clear</string>
    <string name="clearing_cart">Clearing Cart</string>
    <string name="procced_pay">Procced to Pay</string>
    <string name="order_place_success">Thank you for ordering food, Your order has been successfully placed</string>
    <string name="close">Close</string>
    <string name="favourites">Favourites</string>
    <string name="cancelling_order">Cancelling Order..</string>
    <string name="order_cancelled_success">Order cancelled successfully</string>
    <string name="error_order_cancel">Error while cancelling order, please try again</string>
    <string name="sure_cancel_order">Are you sure you want to cancel your order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter">Search Filter</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>