<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/home" />

    </group>

    <!--<item
        android:id="@+id/nav_fav"
        android:icon="@mipmap/fav"
        android:title="@string/favourites" />-->

    <item
        android:id="@+id/nav_hotel_list"
        android:icon="@mipmap/list"
        android:title="Product List" />

    <item
        android:id="@+id/nav_rate"
        android:icon="@mipmap/rate"
        android:title="@string/rateapp" />

    <item
        android:id="@+id/nav_shareapp"
        android:icon="@mipmap/share"
        android:title="@string/shareapp" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@mipmap/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_login"
        android:icon="@mipmap/logout"
        android:title="@string/login" />

</menu>