<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context="com.vpapps.fooddelivery.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/welcomeback"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_to_continue"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!--Email-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:tint="@color/black"
                    android:src="@mipmap/email" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/black"
                    android:theme="@style/TextLabel"
                    app:backgroundTint="@color/black">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/phone"
                        android:textColorHint="@color/black"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/black" />

            </LinearLayout>

        </RelativeLayout>

        <!--Password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginEnd="5dp"
                    android:tint="@color/black"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/password" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/black"
                    android:theme="@style/TextLabel"
                    app:backgroundTint="@color/black">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll2"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/black" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="35dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/cb_rememberme"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:color_checked="@color/black"
                app:color_tick="@color/pink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_corner_pink"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_corner_white"
                android:text="@string/skip"
                android:textColor="@color/pink" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_click_pink"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:text="@string/dnt_have_acc"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/signup"
                android:textColor="@color/pink"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="80dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/pink" />

    </LinearLayout>

</ScrollView>