<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/AppTheme.AppBarOverlay"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/ll_consent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:text="@string/your_ad_consent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_show_personalized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/show_personalized_ad"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/red"
                        android:textSize="12sp" />

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_consent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:checked="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black30" />

            <LinearLayout
                android:id="@+id/llvibrate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text="@string/enable_push_noti"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />

            </LinearLayout>

            <View
                android:id="@+id/view_settings"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black30"/>

            <TextView
                android:id="@+id/textView_moreapp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/moreapp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black30" />

            <TextView
                android:id="@+id/textView_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/privacypolicy"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black30" />

            <TextView
                android:id="@+id/textView_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/about"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_adView_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>