<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/bg_round_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_top_pink"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_rate_close"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="6dp"
            android:src="@mipmap/close" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RatingBar
            android:id="@+id/rating_addreview"
            style="@style/RatingBar_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:max="5"
            android:numStars="5"
            android:theme="@style/RatingBar_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/your_msg"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/et_add_review_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_round_white"
                android:gravity="top"
                android:textSize="14sp"
                android:layout_margin="10dp"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_submit_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/bg_corner_pink"/>

</LinearLayout>